tests/paczka1/fuzzy1/37004389.err
Error in line 2: q4R S105 1,6
Error in line 20: 9vUjWBzc S444 51,2
Error in line 33: A525 S444 54,2
